--- a/style.css
+++ b/style.css
@@ -48,6 +48,29 @@ ul#nav2 li a {
     text-decoration: none;
 }
 
+.grid-container {
+  display: grid;
+  grid-gap: 15px;
+  grid-template-columns: auto auto auto;
+  height: 40vh;
+  width: 80vw;
+  max-height: 40%;
+  max-width: 80%;
+}
+.grid-item {
+  background-color: rgba(255, 255, 255, 0.8);
+  border: 1px solid rgba(0, 0, 0, 0.8);  
+  font-size: 30px;
+  text-align: center;
+  max-height: 100%;
+  max-width: 100%;
+}
+
+.grid-item img{
+  max-height: 100%;
+  max-width: 100%;
+}
+
 /* Change the link color to #111 (black) on hover */
 li a:hover {
     background-color: #111;
