--- a/style.css
+++ b/style.css
@@ -37,6 +37,7 @@ ul li a {
     display: block;
     text-align: center;
     padding: 14px 16px;
+	/*margin: -24px 0px;*/
     text-decoration: none;
 }
 
@@ -85,10 +86,93 @@ section {
   max-width: 100%;
 }
 
-section:nth-child(even) {background-color: #f8f9fa;}
+/*section:nth-child(even) .diamond {
+  height: 150px;
+  width: 150px;
+  background-color: #7FDBFF;
+  transform: rotate(45deg);
+} */
+
+section:nth-child(odd) {background-color: #19beff;}
+section:nth-child(even) {background-color: #FEC340;}
+section:nth-child(odd) .diamond {
+  height: 150px;
+  width: 150px;
+  background-color: #7FDBFF;
+  transform: rotate(45deg);
+} 
+
+section:nth-child(even) .diamond {
+  margin: -50px 0;
+  position: relative;
+  left: 50%;
+  top: 300px;
+  height: 150px;
+  width: 150px;
+  background-color: #FEC340;
+  transform: rotate(45deg);
+} 
 
 h2 {
   font-family: 'Jura', sans-serif;
   font-weight: bold;
 }
 
+.caption {
+  position: relative;
+  overflow: hidden;
+}
+
+.caption__media {
+  max-width: 100%;
+  height: auto;
+}
+
+.caption__overlay {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  padding: 10px;
+  color: white;
+  transform: translateY(100%);
+  transition: transform .35s ease-out;
+}
+
+.caption:hover .caption__overlay {
+  transform: translateY(0);
+}
+
+.caption__overlay__title {
+  margin: 0;
+  padding: 0 0 12px;
+  transform: translateY(calc(-100% - 10px)); /* +10px overlay padding */
+  transition: transform .35s ease-out;
+}
+
+.caption:hover .caption__overlay__title {
+  transform: translateY(0);
+}
+
+.caption::before {
+  content: ' ';
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: transparent;
+  transition: background .35s ease-out;
+}
+
+.caption:hover::before {
+  background: rgba(0, 0, 0, .5);
+}
+
+.caption__overlay__content {
+  font-size: 18px;
+}
+/*footer {
+	background-color: #19beff;
+}*/
