--- a/style.css
+++ b/style.css
@@ -62,7 +62,8 @@ ul#nav2 li a {
   background-color: rgba(255, 255, 255, 0.8);
   border: 1px solid rgba(0, 0, 0, 0.8);  
   font-size: 30px;
-  text-align: center;
+  align-self: center;
+  justify-self: center;
   max-height: 100%;
   max-width: 100%;
 }
