--- a/style.css
+++ b/style.css
@@ -15,6 +15,16 @@ body {
     width: 100%;
     z-index: 999;
 }*/
+button.navbar-toggler {
+	float: right;
+	margin-top: 5px;
+	margin-right: 5px;
+}
+
+#navbar1 {
+	float: right;
+}
+
 .nav1 {
 	padding-top: 5px;
     padding-bottom: 5px;
