--- a/style.css
+++ b/style.css
@@ -250,19 +250,20 @@ iframe {
 }
 #video-view iframe{
 	margin: 0 auto;
-	position: absolute;
+	max-height: 100%;
+	/*position: absolute;
     top:0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 100%;*/
 }
 
 .class-video{
 	position: relative;
-    padding-bottom: 36.25%;
+    /*padding-bottom: 56.25%;
     padding-top: 35px;
     height: 0;
-    overflow: hidden;
+    overflow: hidden;*/
 }
 /*footer {
 	background-color: #19beff;
