--- a/style.css
+++ b/style.css
@@ -84,10 +84,10 @@ ul li a {
 
 .grid-container {
   display: grid;
-  grid-gap: 15px;
+  grid-gap: 10px;
   grid-template-columns: 40% 30% 30%;
   height: 50vh;
-  width: 100vw;
+  width: 90vw;
   max-height: 100%;
   max-width: 100%;
 }
@@ -182,6 +182,7 @@ p {
 }
 
 .caption__overlay {
+  overflow: auto;
   position: absolute;
   top: 0;
   right: 0;
