--- a/css/style.css
+++ b/css/style.css
@@ -36,12 +36,13 @@ button.navbar-toggler {
 .bod {
     float: left;
     height: 3em;
-    /*margin-top: 2px;*/
-    margin-left: 15px;
+    margin-bottom: 3px;
+    margin-left: 20px;
     border-color: white;
-    border-width: 1px;
+    border-width: 0px;
     border-style: solid;
     border-radius: 50%;
+	box-shadow: 0px 5px 3px rgba(0, 0, 0, 0.5);
   }
 
 ul {
