--- a/css/style.css
+++ b/css/style.css
@@ -119,7 +119,7 @@ ul li a {
 
 /* Change the link color to #111 (black) on hover */
 li a:hover {
-    background-color: #111;
+    background-color: rgba(255,255,255,0.3);
     color: white;
 }
 
