--- a/css/style.css
+++ b/css/style.css
@@ -118,13 +118,16 @@ ul li a {
 }
 
 /* Change the link color to #111 (black) on hover */
-li a:hover {
+.mobile li a:active {
     background-color: rgba(255,255,255,0.3);
+	border-radius: 10%;
     color: white;
 }
 
-li a:not(:active) {
-	background-color: transparent;
+.desktop li a:hover {
+	background-color: rgba(255,255,255,0.3);
+	border-radius: 10%;
+    color: white;
 }
 
 section {
@@ -133,6 +136,68 @@ section {
   max-height: 100%;
   width: 100vw;
   max-width: 100%;
+}
+
+.navbar-toggler:focus,
+.navbar-toggler:active {
+   outline: 0;
+}
+.navbar-toggler {
+   padding-top: 8px;
+}
+
+.navbar-toggler span {
+   display: block;
+   background-color: #FFF;
+   height: 3px;
+   width: 25px;
+   margin-top: 4px;
+   margin-bottom: 4px;
+   -webkit-transform: rotate(0deg);
+   -moz-transform: rotate(0deg);
+   -o-transform: rotate(0deg);
+   transform: rotate(0deg);
+   position: relative;
+   left: 0;
+   opacity: 0.8;
+}
+
+.navbar-toggler span:nth-child(1),
+.navbar-toggler span:nth-child(3) {
+   -webkit-transition: transform .35s ease-in-out;
+   -moz-transition: transform .35s ease-in-out;
+   -o-transition: transform .35s ease-in-out;
+   transition: transform .35s ease-in-out;
+}
+
+.navbar-toggler:not(.collapsed) span:nth-child(1) {
+    /*position: absolute;
+    left: 12px;
+    top: 10px;*/
+	top: 7px;
+    -webkit-transform: rotate(135deg);
+    -moz-transform: rotate(135deg);
+    -o-transform: rotate(135deg);
+    transform: rotate(135deg);
+    opacity: 0.8;
+}
+
+.navbar-toggler:not(.collapsed) span:nth-child(2) {
+    height: 12px;
+    visibility: hidden;
+    background-color: transparent;
+}
+
+.navbar-toggler:not(.collapsed) span:nth-child(3) {
+    /*position: absolute;
+    left: 12px;
+    top: 10px;*/
+	top: -16px;
+    -webkit-transform: rotate(-135deg);
+    -moz-transform: rotate(-135deg);
+    -o-transform: rotate(-135deg);
+    transform: rotate(-135deg);
+    opacity: 0.8;
 }
 
 /*section:nth-child(even) .diamond {
@@ -145,17 +210,17 @@ section {
 /*section:nth-child(odd) {background-color: #19beff;}*/
 section:nth-child(odd) {
   background-color: #19beff;
-  background-position: center bottom -1px;
-  background-image: url(img/copper-overlay.svg);
+  background-position: center bottom ;/*bottom -1px*/
+  background-image: url(../img/copper-overlay.svg);
   background-repeat: no-repeat;
-  background-size: 101vw;
+  background-size: 100vw;/*101vw*/
 }
 
 section:nth-child(even) {
   background-color: #FEC340;
   background-attachment: fixed;
   background-position: center bottom;
-  background-image: url(img/giraffe.svg);
+  background-image: url(../img/giraffe.svg);
   background-repeat: no-repeat;
   background-size: 100vw;
 }
