--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,7 @@ button.navbar-toggler {
     border-style: solid;
     border-radius: 50%;
 	box-shadow: 0px 5px 3px rgba(0, 0, 0, 0.5);
+	-webkit-transform: translateZ(0);
   }
 
 #navbar1 ul {
@@ -181,7 +182,6 @@ section {
    -moz-transition: transform .35s ease-in-out;
    -o-transition: transform .35s ease-in-out;
    transition: transform .35s ease-in-out;
-   
 }
 
 .navbar-toggler:not(.collapsed) span:nth-child(1) {
