--- a/css/style.css
+++ b/css/style.css
@@ -103,7 +103,7 @@ ul li a {
 .grid-item {
   /*background-color: rgba(255, 255, 255, 0.8);*/
   /*border: 1px solid rgba(0, 0, 0, 0.8);  */
-  position: absolute;
+  position: relative;
   font-size: 30px;
   align-self: center;
   justify-self: center;
